Sửa API Doc lỗi
